# cs285_fall2023

./: .gitignore  AGENTS.md
hw1/: AGENTS.md  pyproject.toml
hw1/cs285/infrastructure/: pytorch_util.py  utils.py
hw1/cs285/policies/: MLP_policy.py
hw1/cs285/scripts/: run_hw1.py
hw2/: AGENTS.md  pyproject.toml  requirements.txt  test.ipynb
hw2/cs285/agents/: pg_agent.py  test.ipynb
hw2/cs285/cfg/: short_names.yaml
hw2/cs285/infrastructure/: logger.py  utils.py
hw2/cs285/networks/: critics.py  policies.py
hw2/cs285/scripts/: run_hw2.py
hw2/data/q2_pg_cartpole_CartPole-v0_13-02-2025_16-52-38/: events.out.tfevents.1739436758.p-171c5fbd489e-ackcs-00gjeaw5
hw2/data/q2_pg_cartpole_CartPole-v0_13-02-2025_16-54-04/: events.out.tfevents.1739436844.p-171c5fbd489e-ackcs-00gjeaw5
