[project]
name = "cs285-hw2"
version = "0.1.0"
description = "CS285 HW2"
requires-python = ">=3.10,<3.11"
dependencies = [
  "numpy<2",
  "mujoco==2.2.0",
  "gym[box2d,classic_control]==0.25.2",
  "box2d-py==2.3.5",
  "tensorboard>=2.10,<2.12",
  "tensorboardX>=2.5.1,<2.6",
  "matplotlib>=3.5,<3.7",
  "ipython>=7.34,<8",
  "moviepy>=1.0.3,<1.1",
  "pyvirtualdisplay>=3.0,<3.1",
  "torch>=1.12,<1.14",
  "opencv-python>=4.6,<4.7",
  "ipdb>=0.13.9,<0.14",
  "swig==4.0.2",
  "wandb>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cs285"]
